--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "devDependencies": {
     "autoprefixer": "6.5.1",
-    "babel-core": "6.17.0",
+    "babel-core": "^6.17.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.7",
+    "babel-loader": "^6.2.7",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^2.0.1",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
-    "css-loader": "0.26.0",
+    "css-loader": "^0.26.0",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
     "drizzle": "^1.0.1",
@@ -33,19 +35,22 @@
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
     "jest": "17.0.2",
-    "json-loader": "0.5.4",
+    "json-loader": "^0.5.4",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
     "promise": "7.1.1",
+    "react": "^15.6.2",
     "react-dev-utils": "^0.4.2",
+    "react-dom": "^15.6.2",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.8",
     "truffle-hdwallet-provider": "0.0.3",
     "url-loader": "0.5.7",
-    "webpack": "1.14.0",
+    "web3": "^0.20.0",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "1.0.0",
