--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "truffle compile && truffle migrate && rm -rf src/contracts && mv build/contracts src && node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "chain": "geth --datadir=\"/tmp/eth/60/01\" --nodiscover --maxpeers 0 --port 30301 --rpc --rpcapi \"db,eth,net,web3\" --rpcport 8101 --verbosity 6 console"
