--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.2.1",
     "react-router-redux": "^4.0.7",
+    "react-spinners": "^0.3.2",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.0.0",
     "redux-saga": "^0.15.3",
