--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "zeppelin-solidity": "^1.8.0"
   },
   "dependencies": {
+    "faker": "^4.1.0",
     "js-sha256": "^0.9.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
