--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "faker": "^4.1.0",
     "js-sha256": "^0.9.0",
     "react": "^15.4.2",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.2.1",
